--- a/hw4.html
+++ b/hw4.html
@@ -42,7 +42,7 @@
           <header><h3>$35</h3></header>
           <ul>
             <li><header><h4>"Very Cool" package</h4> </header></li>
-            <li>Your customers will be so hyped for your product!</li>
+            <li>Your customers will be so hyped for your product! </li>
             <li>150 colors and patterns to pick from</li>
           </ul>
           <button>Buy $35 Package</button>
@@ -51,7 +51,7 @@
           <header><h3>$50</h3></header>
           <ul>
             <li><header><h4>"Ultra Cool" package</h4> </header></li>
-            <li>You will be setting the trends!</li>
+            <li>You will be setting the trends!;</li>
             <li>500 colors and patterns to pick from</li>
           </ul>
           <button>Buy $50 Package</button>
